--- a/api-server/.htaccess
+++ b/api-server/.htaccess
@@ -7,28 +7,15 @@
 # エラーページの設定
 ErrorDocument 404 /radish/index.php
 
-# CORS設定（Nuxtアプリからのアクセスを許可）
-<IfModule mod_headers.c>
-    # すべてのリクエストにCORSヘッダーを追加
-    Header always set Access-Control-Allow-Origin "*"
-    Header always set Access-Control-Allow-Methods "GET, POST, PUT, DELETE, OPTIONS"
-    Header always set Access-Control-Allow-Headers "Content-Type, Authorization, X-Requested-With, Accept"
-    Header always set Access-Control-Max-Age "86400"
-</IfModule>
-
-# OPTIONSリクエストの処理（プリフライトリクエスト）
-<IfModule mod_rewrite.c>
-    RewriteEngine On
-    RewriteCond %{REQUEST_METHOD} OPTIONS
-    RewriteRule ^(.*)$ $1 [R=200,L]
-</IfModule>
+# CORS設定はPHP側で動的に設定します
+# セッションを使用するため、具体的なオリジンを指定する必要があります
 
 # URLリライト（APIルーティング）
 <IfModule mod_rewrite.c>
     RewriteEngine On
     RewriteBase /radish/
     
-    # APIルーティング
+    # APIルーティング（OPTIONSリクエストも含む）
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteRule ^api/(.*)$ api/index.php [QSA,L]
