Enhance authorization handling and error reporting
- Added support for preserving the Authorization header in .htaccess to ensure it is not lost when using a reverse proxy.
- Updated config.php to handle cases where the Authorization header is set via REDIRECT_HTTP_AUTHORIZATION.
- Improved error handling in the authentication process by providing detailed debug information about authorization headers.
- Modified the auth store to ensure the Authorization header is sent correctly with API requests and to handle errors more gracefully.

--- a/api-server/.htaccess
+++ b/api-server/.htaccess
@@ -10,6 +10,13 @@ ErrorDocument 404 /radish/index.php
 # CORS設定はPHP側で動的に設定します
 # セッションを使用するため、具体的なオリジンを指定する必要があります
 
+# Authorizationヘッダーを保持（リバースプロキシ経由でも削除されないように）
+<IfModule mod_rewrite.c>
+    RewriteEngine On
+    RewriteCond %{HTTP:Authorization} .
+    RewriteRule .* - [E=HTTP_AUTHORIZATION:%{HTTP:Authorization}]
+</IfModule>
+
 # URLリライト（APIルーティング）
 <IfModule mod_rewrite.c>
     RewriteEngine On
