--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "dependencies": {
     "@nuxt/ui": "^2.18.0",
     "@pinia/nuxt": "^0.5.1",
+    "@types/qrcode": "^1.5.6",
     "nuxt": "^3.13.0",
-    "pinia": "^2.2.0"
+    "pinia": "^2.2.0",
+    "qrcode": "^1.5.4"
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
@@ -26,4 +28,3 @@
     "npm": ">=9.0.0"
   }
 }
-
