Enhance API routing and payment processing features
- Introduced v1 API routing in the .htaccess file for better version control.
- Updated the auth and index files to handle both v1 and legacy API paths.
- Enhanced payment processing in the customer order page, allowing for multiple payment methods and improved user feedback.
- Added status handling for tables in the staff interface, including checkout and set completion functionalities.

--- a/api-server/radish/.htaccess
+++ b/api-server/radish/.htaccess
@@ -22,7 +22,12 @@ ErrorDocument 404 /radish/index.php
     RewriteEngine On
     RewriteBase /radish/
     
-    # APIルーティング（OPTIONSリクエストも含む）
+    # v1 APIルーティング（OPTIONSリクエストも含む）
+    RewriteCond %{REQUEST_FILENAME} !-f
+    RewriteCond %{REQUEST_FILENAME} !-d
+    RewriteRule ^v1/(.*)$ v1/index.php [QSA,L]
+    
+    # 旧APIルーティング（後方互換性のため）
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteRule ^api/(.*)$ api/index.php [QSA,L]
