--- a/package.json
+++ b/package.json
@@ -14,13 +14,16 @@
     "@nuxt/ui": "^2.18.0",
     "@pinia/nuxt": "^0.5.1",
     "@types/qrcode": "^1.5.6",
+    "chart.js": "^4.5.1",
     "nuxt": "^3.13.0",
     "pinia": "^2.2.0",
-    "qrcode": "^1.5.4"
+    "qrcode": "^1.5.4",
+    "vue-chartjs": "^5.3.3"
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
     "@nuxtjs/tailwindcss": "^6.12.0",
+    "@types/chart.js": "^2.9.41",
     "typescript": "^5.6.0"
   },
   "engines": {
